[gd_scene load_steps=22 format=3 uid="uid://dj1mpx8a8yeko"]

[ext_resource type="Script" path="res://scenes/npcs/milklady/Milklady.gd" id="1_i2k6g"]
[ext_resource type="PackedScene" uid="uid://c5tliladmodux" path="res://scripts/components/positionsynchronizercomponent/PositionSynchronizerComponent.tscn" id="2_444i3"]
[ext_resource type="PackedScene" uid="uid://c8cji8g03ayyx" path="res://scripts/components/statssynchronizercomponent/StatsSynchronizerComponent.tscn" id="2_v4sko"]
[ext_resource type="PackedScene" uid="uid://kb8mhtyak1ki" path="res://scripts/components/watchersynchronizercomponent/WatcherSynchronizerComponent.tscn" id="2_xwj24"]
[ext_resource type="Texture2D" uid="uid://co4caux37si5b" path="res://assets/images/npcs/milklady/milklady_whole.png" id="2_yblp5"]
[ext_resource type="Texture2D" uid="uid://b8qflr2atk3il" path="res://assets/images/npcs/milklady/milklady_body.png" id="3_cyqqs"]
[ext_resource type="Texture2D" uid="uid://sqhyjw8sxa2g" path="res://assets/images/npcs/milklady/milklady_head.png" id="4_0w10x"]
[ext_resource type="PackedScene" uid="uid://dtmpwn0ids6rv" path="res://scripts/components/wanderbehaviorcomponent/WanderBehaviorCopmonent.tscn" id="4_jq4vr"]
[ext_resource type="Texture2D" uid="uid://dc103ysnnxwm6" path="res://assets/images/npcs/milklady/milklady_left_arm.png" id="5_1mf1y"]
[ext_resource type="Texture2D" uid="uid://6ok6m1nqugg4" path="res://assets/images/npcs/milklady/milklady_left_foot.png" id="6_ba0nm"]
[ext_resource type="PackedScene" uid="uid://b70bia1uuoud4" path="res://scripts/components/shopsynchronizercomponent/ShopSynchronizerComponent.tscn" id="7_b43t0"]
[ext_resource type="Texture2D" uid="uid://bvhajaa34ilol" path="res://assets/images/npcs/milklady/milklady_right_arm.png" id="7_f60ad"]
[ext_resource type="PackedScene" uid="uid://bw315mdnj7nq8" path="res://scripts/components/animationcomponent/AnimationComponent.tscn" id="7_gcbv6"]
[ext_resource type="Texture2D" uid="uid://dlyuyp8sjr4qj" path="res://assets/images/npcs/milklady/milklady_right_foot.png" id="8_xp8pl"]
[ext_resource type="PackedScene" uid="uid://chhiamhxxhm3v" path="res://scripts/components/interfacecomponent/InterfaceComponent.tscn" id="9_3kap7"]
[ext_resource type="PackedScene" uid="uid://dv6a22n6h5bly" path="res://scripts/components/avoidancerayscomponent/AvoidanceRaysComponent.tscn" id="11_y6h07"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6kb0l"]
radius = 30.0
height = 92.0

[sub_resource type="Animation" id="Animation_o7omp"]
resource_name = "Idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skeleton/RemoteBody:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(30, -200)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skeleton/RemoteBody:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Skeleton/RemoteBody/RemoteHead:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-30, -230), Vector2(-30, -230)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Skeleton/RemoteBody/RemoteHead:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -0.0229861]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Skeleton/RemoteBody/RemoteRightArm:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-90, -210), Vector2(-90, -210)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Skeleton/RemoteBody/RemoteRightArm:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -0.0545871]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Skeleton/RemoteBody/RemoteLeftArm:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(140, -190), Vector2(140, -190)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Skeleton/RemoteBody/RemoteLeftArm:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.0805545]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Skeleton/RemoteBody/RemoteRightFoot:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-60, 180)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Skeleton/RemoteBody/RemoteRightFoot:rotation")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Skeleton/RemoteBody/RemoteLeftFoot:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(190, 180)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Skeleton/RemoteBody/RemoteLeftFoot:rotation")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_adxj5"]
resource_name = "Move"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skeleton/RemoteBody:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(30, -200), Vector2(30, -200), Vector2(30, -200), Vector2(30, -200)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skeleton/RemoteBody:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.0260349, 0.0, -0.0271651]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Skeleton/RemoteBody/RemoteHead:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-30, -230), Vector2(-30, -230), Vector2(-30, -230), Vector2(-30, -230)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Skeleton/RemoteBody/RemoteHead:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0134673, 0.0, 0.0219756]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Skeleton/RemoteBody/RemoteRightArm:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-90, -210), Vector2(-90, -210), Vector2(-90, -210), Vector2(-90, -210)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Skeleton/RemoteBody/RemoteRightArm:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.383545, 0.0, -0.506782]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Skeleton/RemoteBody/RemoteLeftArm:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(140, -190), Vector2(140, -190), Vector2(140, -190), Vector2(140, -190)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Skeleton/RemoteBody/RemoteLeftArm:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.630248, 0.0, 0.704172]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Skeleton/RemoteBody/RemoteRightFoot:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-60, 180), Vector2(-10, 190), Vector2(-60, 180), Vector2(-120, 140)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Skeleton/RemoteBody/RemoteRightFoot:rotation")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.692879, 0.0, 0.618864]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Skeleton/RemoteBody/RemoteLeftFoot:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(190, 180), Vector2(80, 160), Vector2(190, 180), Vector2(240, 150)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Skeleton/RemoteBody/RemoteLeftFoot:rotation")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.432408, 0.0, -0.424803]
}

[sub_resource type="Animation" id="Animation_kddhw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skeleton/RemoteBody:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(30, -200)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skeleton/RemoteBody:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Skeleton/RemoteBody/RemoteHead:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-30, -230)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Skeleton/RemoteBody/RemoteHead:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Skeleton/RemoteBody/RemoteRightArm:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-90, -210)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Skeleton/RemoteBody/RemoteRightArm:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Skeleton/RemoteBody/RemoteLeftArm:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(140, -190)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Skeleton/RemoteBody/RemoteLeftArm:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Skeleton/RemoteBody/RemoteRightFoot:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-60, 180)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Skeleton/RemoteBody/RemoteRightFoot:rotation")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Skeleton/RemoteBody/RemoteLeftFoot:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(190, 180)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Skeleton/RemoteBody/RemoteLeftFoot:rotation")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4d8u1"]
_data = {
"Idle": SubResource("Animation_o7omp"),
"Move": SubResource("Animation_adxj5"),
"RESET": SubResource("Animation_kddhw")
}

[node name="Milklady" type="CharacterBody2D"]
scale = Vector2(0.8, 0.8)
collision_layer = 9
script = ExtResource("1_i2k6g")

[node name="WatcherSynchronizerComponent" parent="." instance=ExtResource("2_xwj24")]

[node name="PositionSynchronizerComponent" parent="." node_paths=PackedStringArray("watcher_synchronizer") instance=ExtResource("2_444i3")]
watcher_synchronizer = NodePath("../WatcherSynchronizerComponent")

[node name="StatsSynchronizerComponent" parent="." node_paths=PackedStringArray("watcher_synchronizer") instance=ExtResource("2_v4sko")]
watcher_synchronizer = NodePath("../WatcherSynchronizerComponent")
movement_speed = 125.0

[node name="WanderBehaviorCopmonent" parent="." node_paths=PackedStringArray("stats_component", "avoidance_rays_component") instance=ExtResource("4_jq4vr")]
stats_component = NodePath("../StatsSynchronizerComponent")
avoidance_rays_component = NodePath("../AvoidanceRaysComponent")

[node name="AvoidanceRaysComponent" parent="." instance=ExtResource("11_y6h07")]

[node name="AnimationComponent" parent="." node_paths=PackedStringArray("animation_player", "stats") instance=ExtResource("7_gcbv6")]
animation_player = NodePath("../AnimationPlayer")
stats = NodePath("../StatsSynchronizerComponent")

[node name="ShopSynchronizerComponent" parent="." instance=ExtResource("7_b43t0")]

[node name="InterfaceComponent" parent="." node_paths=PackedStringArray("stats_synchronizer") instance=ExtResource("9_3kap7")]
offset_top = -90.0
offset_bottom = -50.0
stats_synchronizer = NodePath("../StatsSynchronizerComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(8, -43)
shape = SubResource("CapsuleShape2D_6kb0l")

[node name="Sprites" type="Node2D" parent="."]
scale = Vector2(0.1, 0.1)

[node name="MilkladyWhole" type="Sprite2D" parent="Sprites"]
visible = false
position = Vector2(77.0001, -471.5)
texture = ExtResource("2_yblp5")

[node name="MilkladyRightArm" type="Sprite2D" parent="Sprites"]
position = Vector2(-60, -410)
scale = Vector2(1, 1)
texture = ExtResource("7_f60ad")
offset = Vector2(137, -61.5)

[node name="MilkladyBody" type="Sprite2D" parent="Sprites"]
position = Vector2(30, -200)
scale = Vector2(1, 1)
texture = ExtResource("3_cyqqs")
offset = Vector2(47.0001, -271.5)

[node name="MilkladyHead" type="Sprite2D" parent="Sprites"]
position = Vector2(0, -430)
scale = Vector2(1, 1)
texture = ExtResource("4_0w10x")
offset = Vector2(77.0001, -41.5)

[node name="MilkladyRightFoot" type="Sprite2D" parent="Sprites"]
position = Vector2(-30, -20)
scale = Vector2(1, 1)
texture = ExtResource("8_xp8pl")
offset = Vector2(107, -451.5)

[node name="MilkladyLeftFoot" type="Sprite2D" parent="Sprites"]
position = Vector2(220, -20)
scale = Vector2(1, 1)
texture = ExtResource("6_ba0nm")
offset = Vector2(-133, -451.5)

[node name="MilkladyLeftArm" type="Sprite2D" parent="Sprites"]
position = Vector2(170, -390)
scale = Vector2(1, 1)
texture = ExtResource("5_1mf1y")
offset = Vector2(-92.9999, -101.5)

[node name="Skeleton" type="Node2D" parent="."]
scale = Vector2(0.1, 0.1)

[node name="RemoteBody" type="RemoteTransform2D" parent="Skeleton"]
position = Vector2(30, -200)
remote_path = NodePath("../../Sprites/MilkladyBody")

[node name="RemoteHead" type="RemoteTransform2D" parent="Skeleton/RemoteBody"]
position = Vector2(-30, -230)
remote_path = NodePath("../../../Sprites/MilkladyHead")

[node name="RemoteRightArm" type="RemoteTransform2D" parent="Skeleton/RemoteBody"]
position = Vector2(-90, -210)
remote_path = NodePath("../../../Sprites/MilkladyRightArm")

[node name="RemoteLeftArm" type="RemoteTransform2D" parent="Skeleton/RemoteBody"]
position = Vector2(140, -190)
remote_path = NodePath("../../../Sprites/MilkladyLeftArm")

[node name="RemoteRightFoot" type="RemoteTransform2D" parent="Skeleton/RemoteBody"]
position = Vector2(-60, 180)
remote_path = NodePath("../../../Sprites/MilkladyRightFoot")

[node name="RemoteLeftFoot" type="RemoteTransform2D" parent="Skeleton/RemoteBody"]
position = Vector2(190, 180)
remote_path = NodePath("../../../Sprites/MilkladyLeftFoot")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4d8u1")
}
